# host-marimo-test

./: .gitignore  LICENSE  README.md  Wave_lstsq_marimo.html  Wave_lstsq_marimo.py  data_analysis.html  example.html  index.html  pyproject.toml  requirements.txt
.github/workflows/: deploy-notebooks.yml
notebooks/: Wave_lstsq_marimo.py  data_analysis.py  example.py
