[build-system]
build-backend = "uv_build"

requires = [
  "uv-build>=0.8,<0.9",
]

[project]
name = "host-marimo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [ { name = "Mikael Mortensen" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "flax>=0.12",
  "jax>=0.8.1",
  "matplotlib>=3.9.3",
  "optax>=0.2.6",
  "pre-commit>=4.3",
  "sympy>=1.13.3",
  "pandas>=2.0",
]

[dependency-groups]
dev = [
  "ipython>=8.37.0",
  "ruff>=0.12.10",
  "soap-jax",
  "ipykernel>=6.30.1",
  "marimo[recommended]>=0.15.2",
  "pre-commit>=4.3.0",
  "shapely>=2.1.0",
  "ty>=0.0.13",
  "urllib3>=2.6.3",
]

[tool.uv.sources]
soap-jax = { git = "https://github.com/mikaem/SOAP_JAX" }
# soap-jax = { git = "https://github.com/haydn-jones/SOAP_JAX" }
